--- a/4 Executando a sua primeira aplicação em Containers/1.md
+++ b/4 Executando a sua primeira aplicação em Containers/1.md
@@ -1,1 +1,252 @@
 https://github.com/KubeDev/conversao-temperatura
+
+Link do repositório do projeto:
+https://github.com/KubeDev/conversao-temperatura
+
+Instruções de instalação do NodeJS:
+https://github.com/nodesource/distributions#installation-instructions
+
+# Executando a Sua Primeira Aplicação em Containers
+## Projeto: Conversão de Temperatura
+O objetivo deste projeto é criar e executar uma aplicação em contêiner usando **Docker**. A aplicação, desenvolvida em **Node.js**, será configurada para ser executada em um contêiner Docker. Vamos criar, configurar e executar o ambiente completo com o Docker.
+
+# Estrutura do Projeto
+bash
+```
+conversao-temperatura/
+│
+├── app.js                 # Código principal da aplicação Node.js
+├── package.json           # Configurações e dependências do projeto Node.js
+├── Dockerfile             # Definição do contêiner Docker
+├── docker-compose.yml     # Arquivo para orquestração com Docker Compose
+├── index.html             # Página HTML para interação no navegador
+└── node_modules/          # Diretório gerado pelo npm (não criar manualmente)
+```
+
+# Conteúdo dos Arquivos
+## 1. `app.js`
+javascript
+```
+const express = require('express');
+const path = require('path');
+
+const app = express();
+const port = 8080;
+
+// Servir arquivos estáticos (HTML, CSS, JS)
+app.use(express.static(path.join(__dirname)));
+
+// Endpoint para conversão de temperatura
+app.get('/convert', (req, res) => {
+  const { value, scale } = req.query;
+
+  if (!value || !scale) {
+    return res.status(400).json({ error: 'Informe o valor e a escala (C ou F).' });
+  }
+
+  const temp = parseFloat(value);
+
+  if (scale.toUpperCase() === 'C') {
+    const fahrenheit = (temp * 9) / 5 + 32;
+    return res.json({ celsius: temp, fahrenheit });
+  } else if (scale.toUpperCase() === 'F') {
+    const celsius = ((temp - 32) * 5) / 9;
+    return res.json({ fahrenheit: temp, celsius });
+  } else {
+    return res.status(400).json({ error: 'Escala inválida. Use "C" para Celsius ou "F" para Fahrenheit.' });
+  }
+});
+
+app.listen(port, () => {
+  console.log(`Aplicação rodando em http://localhost:${port}`);
+});
+```
+## 2. `package.json`
+json
+```
+{
+  "name": "conversao-temperatura",
+  "version": "1.0.0",
+  "description": "Projeto para conversão de temperaturas em NodeJS",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
+}
+```
+## Comando para instalar as dependências:
+
+bash
+```
+npm install
+```
+## 3. `index.html`
+html
+```
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conversão de Temperatura</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+    }
+    .container {
+      max-width: 400px;
+      margin: auto;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+      text-align: center;
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+    input[type="number"] {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+      margin-bottom: 15px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    button {
+      width: 100%;
+      padding: 10px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background-color: #0056b3;
+    }
+    .result {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 1.2em;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Conversão de Temperatura</h1>
+    <label for="value">Valor</label>
+    <input type="number" id="value" placeholder="Digite a temperatura">
+
+    <label for="scale">Converter para:</label>
+    <select id="scale">
+      <option value="C">Celsius</option>
+      <option value="F">Fahrenheit</option>
+    </select>
+
+    <button id="convert">Converter</button>
+
+    <div class="result" id="result"></div>
+  </div>
+
+  <script>
+    document.getElementById('convert').addEventListener('click', async () => {
+      const value = document.getElementById('value').value;
+      const scale = document.getElementById('scale').value;
+
+      if (!value) {
+        alert('Por favor, insira um valor.');
+        return;
+      }
+
+      try {
+        const response = await fetch(`http://localhost:8080/convert?value=${value}&scale=${scale}`);
+        const data = await response.json();
+
+        if (data.error) {
+          document.getElementById('result').textContent = data.error;
+        } else {
+          const resultText = scale === 'C'
+            ? `Resultado: ${data.fahrenheit} °F`
+            : `Resultado: ${data.celsius} °C`;
+
+          document.getElementById('result').textContent = resultText;
+        }
+      } catch (error) {
+        document.getElementById('result').textContent = 'Erro ao se conectar com o servidor.';
+      }
+    });
+  </script>
+</body>
+</html>
+```
+## 4. `Dockerfile`
+dockerfile
+```
+# Usar a imagem oficial do Node.js
+FROM node:16
+
+# Definir o diretório de trabalho no contêiner
+WORKDIR /usr/src/app
+
+# Copiar os arquivos package.json e package-lock.json
+COPY package*.json ./
+
+# Instalar as dependências
+RUN npm install
+
+# Copiar o restante do código da aplicação
+COPY . .
+
+# Expor a porta usada pela aplicação
+EXPOSE 8080
+
+# Comando para rodar a aplicação
+CMD ["npm", "start"]
+```
+## 5. `docker-compose.yml`
+yaml
+```
+version: '3.8'
+services:
+  app:
+    build:
+      context: .
+    ports:
+      - "8080:8080"
+    volumes:
+      - .:/usr/src/app
+    container_name: conversao-temperatura
+```
+
+# Passos para Executar
+1. **Instalar dependências do Node.js**:
+
+bash
+```
+npm install
+```
+2. **Executar localmente com Node.js**:
+
+bash
+```
+node app.js
+```
+- Acesse: http://localhost:8080/index.html
+
+3. **Executar com Docker Compose**:
+
+bash
+```
+docker-compose up
+```
+- Acesse: http://localhost:8080
+
+Agora você tem um projeto totalmente funcional que combina Node.js, Docker e uma interface HTML para a conversão de temperatura. Se precisar de mais explicações ou ajustes, é só pedir! 😊
