--- a/5 Primeiros passos com Docker Images/6.md
+++ b/5 Primeiros passos com Docker Images/6.md
@@ -1,1 +1,157 @@
-Docker Commit na Pratica
+# Docker Commit na Prática
+O comando `docker commit` permite criar uma imagem Docker a partir de um contêiner existente. Ele é muito útil para capturar o estado atual de um contêiner, incluindo configurações, arquivos e pacotes instalados, e transformá-lo em uma imagem reutilizável.
+
+Abaixo está um exemplo prático detalhado do uso do `docker commit`.
+
+# 1. Cenário
+Vamos criar um contêiner baseado no **Ubuntu**, instalar o pacote `curl`, adicionar um arquivo de texto, e capturar esse estado como uma nova imagem com o `docker commit`.
+
+# 2. Passos Práticos
+## 2.1 Criar e Iniciar um Contêiner
+1. Execute o contêiner interativo baseado na imagem Ubuntu:
+
+bash
+```
+docker run -it ubuntu
+```
+2. Dentro do contêiner:
+
+- Atualize os pacotes:
+
+bash
+```
+apt-get update
+```
+- Instale o curl:
+
+bash
+```
+apt-get install -y curl
+```
+- Crie um arquivo de texto:
+
+bash
+```
+echo "Bem-vindo ao contêiner personalizado!" > /home/bemvindo.txt
+```
+3. Saia do contêiner digitando:
+
+bash
+```
+exit
+```
+## 2.2 Listar Contêineres Parados
+Após sair, o contêiner será parado. Liste os contêineres:
+
+bash
+```
+docker ps -a
+```
+**Saída Exemplo**:
+
+java
+```
+CONTAINER ID   IMAGE     COMMAND       CREATED         STATUS                     NAMES
+f1a2b3c4d5e6   ubuntu    "/bin/bash"   5 minutes ago   Exited (0) 10 seconds ago  adoring_curie
+```
+- Anote o **CONTAINER ID** ou o **NOME** (no exemplo acima: `f1a2b3c4d5e6` ou `adoring_curie`).
+
+# 2.3 Criar uma Nova Imagem com Docker Commit
+1. Use o comando `docker commit` para capturar o estado do contêiner:
+
+bash
+```
+docker commit -a "Seu Nome" -m "Imagem personalizada com curl e arquivo de boas-vindas" f1a2b3c4d5e6 ubuntu-personalizado
+```
+- `-a "Seu Nome"`: Adiciona o autor da imagem.
+- `-m "Mensagem"`: Descrição da imagem.
+- `f1a2b3c4d5e6`: ID ou nome do contêiner.
+- `ubuntu-personalizado`: Nome da nova imagem.
+
+## 2.4 Verificar a Nova Imagem
+Liste as imagens disponíveis:
+
+bash
+```
+docker images
+```
+### Saída Exemplo:
+
+wasm
+```
+REPOSITORY            TAG       IMAGE ID       CREATED          SIZE
+ubuntu-personalizado  latest    1a2b3c4d5e6f   10 seconds ago   75MB
+ubuntu                latest    f643c72bc252   2 weeks ago      29MB
+```
+## 2.5 Testar a Nova Imagem
+1. Inicie um contêiner baseado na nova imagem:
+
+bash
+```
+docker run -it ubuntu-personalizado
+```
+2. Verifique se o `curl` está instalado:
+
+bash
+```
+curl --version
+```
+3. Confira o arquivo de boas-vindas:
+
+bash
+```
+cat /home/bemvindo.txt
+```
+**Saída Esperada**:
+
+```
+Bem-vindo ao contêiner personalizado!
+```
+# 4. Vantagens do Docker Commit
+1. **Prototipagem Rápida**:
+- Permite criar imagens rapidamente sem precisar de um Dockerfile.
+
+2. **Backup de Contêineres**:
+- Você pode capturar o estado atual de um contêiner antes de descartá-lo.
+
+3. **Flexibilidade**:
+- Útil para criar imagens a partir de ambientes configurados manualmente.
+
+# 5. Limitações do Docker Commit
+1. **Não Reprodutível**:
+- Alterações feitas manualmente no contêiner podem ser difíceis de replicar em outros sistemas.
+
+2. **Falta de Controle Versus Dockerfile**:
+- Com um Dockerfile, você pode documentar claramente todas as etapas e replicar facilmente o processo.
+
+3. **Tamanho da Imagem**:
+- Dependendo do estado do contêiner, a imagem resultante pode ser maior do que uma criada com um Dockerfile otimizado.
+
+# 6. Alternativa: Converter para Dockerfile
+Se você usou o `docker commit` para criar uma imagem, pode converter as etapas realizadas em um **Dockerfile** para maior controle.
+
+1. Inspecione o histórico da imagem:
+
+bash
+```
+docker history ubuntu-personalizado
+```
+
+2. Baseie-se nas alterações feitas para criar um `Dockerfile`:
+
+dockerfile
+```
+FROM ubuntu
+RUN apt-get update && apt-get install -y curl
+COPY bemvindo.txt /home/bemvindo.txt
+```
+3. Construa a imagem com:
+
+bash
+```
+docker build -t ubuntu-personalizado:2.0 .
+```
+# 7. Conclusão
+O `docker commit` é uma ferramenta poderosa e prática para capturar rapidamente o estado de um contêiner e transformá-lo em uma imagem reutilizável. É ideal para prototipagem e desenvolvimento inicial, mas para fluxos de trabalho mais robustos e reprodutíveis, o uso de um Dockerfile é altamente recomendado.
+
+Se precisar de ajuda com imagens ou configurações mais complexas, é só perguntar! 😊
