--- a/5 Primeiros passos com Docker Images/6.1.md
+++ b/5 Primeiros passos com Docker Images/6.1.md
@@ -28,3 +28,87 @@ docker container run -it -p 8080:8080 dvp-conversao-temperatura /bin/bash
 ```
 docker container run -d -p 8080:8080 dvp-conversao-temperatura node /app/server.js
 ```
+# 6. Publicando Portas Sem EXPOSE
+Mesmo sem `EXPOSE` no Dockerfile, você pode mapear e publicar portas manualmente ao executar o contêiner:
+
+bash
+```
+docker run -p 8080:80 minha-imagem
+```
+- Nesse caso, o `EXPOSE` não é obrigatório, mas ajuda na documentação e automação.
+
+# 7. EXPOSE e Ferramentas de Orquestração
+Ferramentas como Kubernetes utilizam a instrução `EXPOSE` para configurar serviços e mapeamentos de portas automaticamente:
+
+## Exemplo com Kubernetes
+No arquivo Dockerfile:
+
+dockerfile
+```
+EXPOSE 8080
+```
+No manifesto Kubernetes (YAML):
+
+yaml
+```
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: minha-aplicacao
+spec:
+  template:
+    spec:
+      containers:
+        - name: minha-aplicacao
+          image: minha-imagem
+          ports:
+            - containerPort: 8080
+```
+Aqui:
+- O Kubernetes usa a porta declarada no `EXPOSE` para configurar o `containerPort`.
+
+# 8. Boas Práticas com EXPOSE
+1. **Documente Todas as Portas Necessárias**:
+   - Declare no Dockerfile todas as portas que a aplicação precisa para funcionar.
+
+2. **Combine EXPOSE com CMD ou ENTRYPOINT**:
+   - Certifique-se de que o serviço iniciado pelo `CMD` ou `ENTRYPOINT` escuta nas portas declaradas no `EXPOSE`.
+
+3. **Use `-p` para Mapear Portas Específicas**:
+   - Evite depender apenas de `-P`, que usa portas aleatórias no host.
+
+4. **Considere Protocolos (TCP/UDP)**:
+   - Declare explicitamente o protocolo usado, especialmente para portas UDP.
+
+# 9. Exemplo Avançado
+Dockerfile para uma aplicação com múltiplas portas e serviços:
+
+dockerfile
+```
+FROM python:3.9-slim
+
+# Instalar dependências
+COPY requirements.txt .
+RUN pip install -r requirements.txt
+
+# Copiar o código
+COPY . /app
+WORKDIR /app
+
+# Expor diferentes serviços
+EXPOSE 5000        # API RESTful
+EXPOSE 9000/tcp    # Serviço de administração
+EXPOSE 4000/udp    # Comunicação via UDP
+
+# Iniciar a aplicação
+CMD ["python", "app.py"]
+```
+# 10. Conclusão
+A instrução `EXPOSE` é uma ferramenta simples, mas poderosa, para documentar as portas que o contêiner utiliza e facilitar a integração com ferramentas de orquestração. Embora não publique automaticamente as portas, ela é essencial para informar quais portas precisam ser configuradas ao executar ou gerenciar o contêiner.
+
+## Resumo:
+- **Função**: Documentar as portas que o contêiner utiliza.
+- **Mapeamento Manual**: Use -p ou -P ao executar o contêiner.
+- **Documentação e Automação**: Facilita a colaboração e integração com ferramentas como Kubernetes.
+
+Se precisar de mais exemplos ou ajustes em um Dockerfile, é só chamar! 🚀😊
