--- a/6 Avançado em Imagens Docker com Dockerfile/15.md
+++ b/6 Avançado em Imagens Docker com Dockerfile/15.md
@@ -1,2 +1,13 @@
 # Comparação entre Docker Commit e Dockerfile
 Tanto o **Docker Commit** quanto o **Dockerfile** permitem criar imagens Docker personalizadas, mas eles funcionam de maneiras muito diferentes e possuem casos de uso específicos. Abaixo, vamos comparar as duas abordagens detalhadamente.
+
+# 1. O Que É Docker Commit?
+O comando `docker commit` cria uma nova imagem com base no estado de um contêiner em execução. É como tirar um "snapshot" do contêiner e salvar como uma nova imagem.
+
+Vantagens do Docker Commit
+Rápido para protótipos: Permite criar imagens rapidamente sem precisar escrever um Dockerfile.
+Flexível: Útil em casos onde configurações manuais ou interativas são necessárias.
+Desvantagens do Docker Commit
+Dificuldade de reprodução: Não documenta o processo; as mudanças realizadas no contêiner são difíceis de repetir.
+Práticas não declarativas: Depende de modificações manuais, tornando-o menos previsível e suscetível a erros humanos.
+Pouca escalabilidade: Difícil de compartilhar ou versionar em equipes.
